--- a/schedule-app/src/app/groups/view-group/view-group.component.html
+++ b/schedule-app/src/app/groups/view-group/view-group.component.html
@@ -1,3 +1,15 @@
-<p>
-  view-group works!
-</p>
+<div *ngFor="let group of group" class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <app-group-info [group]="group" [term]="term"></app-group-info>
+    </div>
+    <div class="col-md-9">
+        <app-group-courses [group]="group" [term]="term"></app-group-courses>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+        <app-group-schedule [group]="group" [days]="days" [hours]="hours" [schedule]="schedule"></app-group-schedule>
+    </div>
+  </div>
+</div>
