--- a/schedule-app/src/app-theme.scss
+++ b/schedule-app/src/app-theme.scss
@@ -1,7 +1,9 @@
-@import '~@angular/material/themeing';
+@import '~@angular/material/_theming.scss';
 @include mat-core();
 
-$app-primary: mat-pallete($mat-red, 900);
-$app-theme: mat-light-theme($app-primary);
+$app-primary: mat-palette($mat-red, 900);
+$app-accent:  mat-palette($mat-indigo);
+
+$app-theme: mat-light-theme($app-primary, $app-accent);
 
 @include angular-material-theme($app-theme);
