--- a/schedule-app/src/app/search/search.component.html
+++ b/schedule-app/src/app/search/search.component.html
@@ -1,4 +1,28 @@
 <div class="container">
+  <mat-card>
+    <mat-card-title>
+      Welcome to the new Schedule App!
+    </mat-card-title>
+    <mat-card-content>
+      <p>
+        There are several tools at Rose-Hulman that present data in different ways. For example, the schedule lookup page, banner
+        web, course catalogs, and moodle have data on students, faculty, courses, terms, and schedule. However, all the data
+        is not collocated; thus it is challenging to perform simple analyses on the data and glean simple information from
+        the collective dataset.
+      </p>
+      <p>
+        The goal of this website is to bring all this data together into one collective dataset and give a user (e.g., department
+        head, faculty, advisor, student) the ability to perform simple queries/analyses and glean important information from
+        the collective dataset.
+      </p>
+      <p>
+        To begin, simply view the side nagivagtion bar to go to view a list of your classes, create a group for one of the terms,
+        and much more. Along with the side navigation bar, one can simply enter in the appropriate information below to search
+        for specific details about a specific term.
+      </p>
+    </mat-card-content>
+  </mat-card>
+  <br>
   <form [formGroup]="searchForm" (ngSubmit)="search(searchForm.value)">
     <mat-card>
       <mat-card-title>
@@ -41,7 +65,7 @@
         </mat-input-container>
       </mat-card-content>
       <mat-card-actions style="margin-right:0;margin-left:0;">
-          <button mat-raised-button class="mat-primary" [disabled]="!searchForm.valid">Search</button>
+        <button mat-raised-button class="mat-primary" [disabled]="!searchForm.valid">Search</button>
       </mat-card-actions>
     </mat-card>
   </form>
