--- a/schedule-app/src/app/groups/view-group/group-schedule/group-schedule.component.html
+++ b/schedule-app/src/app/groups/view-group/group-schedule/group-schedule.component.html
@@ -1,5 +1,8 @@
 <mat-card>
   <mat-card-content>
+    <p fxLayout="row" fxLayoutAlign="center center">
+      Available time to meet = <mat-icon class="open" style="margin-left: 5px">thumb_up</mat-icon>
+    </p>
     <table class="table">
       <thead>
         <tr class="times">
