--- a/schedule-app/src/app/groups/view-group/group-info/group-info.component.html
+++ b/schedule-app/src/app/groups/view-group/group-info/group-info.component.html
@@ -10,7 +10,8 @@
       <p>Clients:</p>
     </ng-template>
     <p *ngFor="let client of group.faculty">
-      <a [routerLink]="['/faculty', client.username, term]">{{client.name}}</a>
+      <a [routerLink]="['/faculty', client.username, term]">{{client.username}}</a>: 
+      {{client.name}}
     </p>
     <hr>
     <p *ngIf="group.students.length === 1; else members">Members:</p>
@@ -18,7 +19,8 @@
       <p>Members:</p>
     </ng-template>
     <p *ngFor="let member of group.students">
-      <a [routerLink]="['/student', member.username, term]">{{member.name}}</a>
+      <a [routerLink]="['/student', member.username, term]">{{member.username}}</a>: 
+      {{member.name}} 
     </p>
   </mat-card-content>
 </mat-card>
