Fixed how displaying gropus for the student was being displayed

--- a/schedule-app/src/app/student/student-term-info/student-term-info.component.html
+++ b/schedule-app/src/app/student/student-term-info/student-term-info.component.html
@@ -41,7 +41,7 @@
       <app-student-schedule [student]="student" [days]="days" [hours]="hours" [schedule]="schedule"></app-student-schedule>
     </div>
   </div>
-  <div class="row" fxLayout="row" fxLayoutAlign="space-around center">
+  <div class="row" fxLayout="row" fxLayoutAlign="space-between start">
     <div class="col-md-3" *ngFor="let group of groups">
       <mat-card>
         <mat-card-title>
