--- a/schedule-app/src/app/groups/view-group/view-group.component.html
+++ b/schedule-app/src/app/groups/view-group/view-group.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-        <app-group-schedule [group]="group" [days]="days" [hours]="hours" [schedule]="schedule"></app-group-schedule>
+        <app-group-schedule [group]="group" [days]="days" [hours]="hours" [schedule]="schedule" [courseMap]="courseMap"></app-group-schedule>
     </div>
   </div>
 </div>
