--- a/schedule-app/src/app/groups/view-group/group-info/group-info.component.html
+++ b/schedule-app/src/app/groups/view-group/group-info/group-info.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <mat-card-title>{{group.groupName}}</mat-card-title>
   <mat-card-content>
-    <p>For:
+    <p>For: 
       <a [routerLink]="['/course', group.className, term]">{{group.className}}</a>
     </p>
     <hr>
@@ -10,8 +10,7 @@
       <p>Clients:</p>
     </ng-template>
     <p *ngFor="let client of group.faculty">
-      <a [routerLink]="['/faculty', client.username, term]">{{client.username}}</a>: 
-      {{client.name}}
+      <a [routerLink]="['/faculty', client.username, term]">{{client.username}}</a>: {{client.name}}
     </p>
     <hr>
     <p *ngIf="group.students.length === 1; else members">Members:</p>
@@ -19,8 +18,7 @@
       <p>Members:</p>
     </ng-template>
     <p *ngFor="let member of group.students">
-      <a [routerLink]="['/student', member.username, term]">{{member.username}}</a>: 
-      {{member.name}} 
+      <a [routerLink]="['/student', member.username, term]">{{member.username}}</a>: {{member.name}}
     </p>
   </mat-card-content>
 </mat-card>
