Added red or green background if group can or can't meet

--- a/schedule-app/src/app/groups/view-group/group-schedule/group-schedule.component.css
+++ b/schedule-app/src/app/groups/view-group/group-schedule/group-schedule.component.css
@@ -12,10 +12,10 @@
   width: 300px;
 }
 
-.open {
-  color: green; 
+.available {
+  background-color: #aed581;
 }
 
-.closed {
-  color: red; 
+.unavailable {
+  background-color:#e57373; 
 }
