--- a/schedule-app/src/app/groups/view-group/group-schedule/group-schedule.component.html
+++ b/schedule-app/src/app/groups/view-group/group-schedule/group-schedule.component.html
@@ -1,4 +1,9 @@
 <mat-card>
+  <div fxLayout="row" fxLayoutAlign="space-around start" class="boxes">
+    <div *ngFor="let student of students">
+      <mat-checkbox mat-checkbox-checked (change)="toggle($event, student)" [id]="student" checked=true>{{student}}</mat-checkbox>
+    </div>
+  </div>
   <mat-card-content>
     <table class="table">
       <thead>
@@ -31,8 +36,10 @@
             <div *ngIf="hasValueForTime(day, hour); else open">
               <div *ngFor="let class of classes">
                 <div *ngIf="hasMemberForClass(class)">
-                  <div *ngFor="let student of students">
-                    {{student}} in {{class}}
+                  <div *ngFor="let member of members">
+                    <div *ngIf="isChecked(member)">
+                      {{member}} in {{class}}
+                    </div>
                   </div>
                 </div>
               </div>
