--- a/schedule-app/src/app/course-information/course-taken/year/course-taken-year.component.html
+++ b/schedule-app/src/app/course-information/course-taken/year/course-taken-year.component.html
@@ -1,6 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
+      <div class="terms" fxLayout="row" fxLayoutAlign="space-around center">
+        <button mat-raised-button color="accent" [routerLink]="['/course', course, '201630']">View {{course}} Info</button>
+        <button mat-raised-button color="accent" (click)="switchView()">Switch to Not Taken Page</button>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
       <mat-card class="container">
         <mat-card-title>
           <div *ngIf="amount > 1; else single">
