Added searching for a specific course

--- a/schedule-app/src/app/search/member-search/member-search.component.html
+++ b/schedule-app/src/app/search/member-search/member-search.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="searchForm" (ngSubmit)="search(searchForm.value)">
   <mat-card>
     <mat-card-title>
-      Search for a Student or Faculty
+      Search for a Student or Faculty Member
     </mat-card-title>
     <mat-card-content>
       <mat-input-container dividerColor="accent">
