--- a/schedule-app/src/app/search/search.component.html
+++ b/schedule-app/src/app/search/search.component.html
@@ -28,14 +28,7 @@
       <app-member-search></app-member-search>
     </div>
     <div class="col-md-6">
-      <mat-card>
-        <mat-card-title>
-          Search for a Course
-        </mat-card-title>
-        <mat-card-content>
-          Coming soon...
-        </mat-card-content>
-      </mat-card>
+      <app-course-search></app-course-search>
     </div>
   </div>
 </div>
