Trying to fix course bug

--- a/schedule-app/src/app/course-information/course-information.component.html
+++ b/schedule-app/src/app/course-information/course-information.component.html
@@ -1,5 +1,4 @@
 <div class="container">
-  
   <div class="row">
     <div class="col-md-12">
       <mat-card class="container">
@@ -24,7 +23,7 @@
                 </th>
                 <th>{{course.creditHours}}</th>
                 <th>{{course.numStudents}}</th>
-                <th>{{course.filteredTimes}}</th>
+                <th>{{course.filteredTime}}</th>
               </tr>
             </thead>
           </table>
