--- a/schedule-app/src/app/courses/course-faculty-info/course-faculty-info.component.html
+++ b/schedule-app/src/app/courses/course-faculty-info/course-faculty-info.component.html
@@ -3,5 +3,8 @@
   <mat-card-content>
     <p>Username: {{course.instructor.username}}</p>
     <p *ngIf="course.instructor.dept !== ''">Department: {{course.instructor.dept}}</p>
+    <a [routerLink]="['/course', course.name, 'students-taken', 'all']">Students Taken</a>
+    <br/>
+    <a [routerLink]="['/course', course.name, 'students-taken', 'all']">Students Not Taken</a>
   </mat-card-content>
 </mat-card>
