--- a/schedule-app/src/app/search/search.component.html
+++ b/schedule-app/src/app/search/search.component.html
@@ -3,17 +3,9 @@
     <div class="col-md-12">
       <mat-card>
         <mat-card-title>
-          Welcome to the new Schedule App!
+          <h2>Hello {{authService.getName()}}!</h2>
         </mat-card-title>
         <mat-card-content>
-          <p>
-            There are several tools at Rose-Hulman that present data in different ways. For example, the schedule lookup page, banner
-            web, course catalogs, and moodle have data on students, faculty, courses, terms, and schedule. However, all the
-            data is not collocated; thus it is challenging to perform simple analyses on the data and glean simple information
-            from the collective dataset. This website brings all that data together into one collective dataset and give
-            a user (e.g., department head, faculty, advisor, student) the ability to perform simple queries/analyses and
-            glean important information from the collective dataset.
-          </p>
           <p>
             To begin, use the side navigation bar or use the search functionality below. The side nagivagtion bar to go to view a list
             of your classes, create a group for one of the terms, and much more whereas the search functionality below will
