--- a/schedule-app/src/app/groups/view-group/group-info/group-info.component.html
+++ b/schedule-app/src/app/groups/view-group/group-info/group-info.component.html
@@ -7,24 +7,24 @@
     </mat-expansion-panel-header>
     <mat-card-content>
       <p>For:
-        <a [routerLink]="['/course', group.className, term]">{{group.className}}</a>
+        <a [routerLink]="['/course', group.for, term]">{{group.for}}</a>
       </p>
       <hr>
-      <p *ngIf="group.faculty.length === 1; else clients">Client:</p>
-      <ng-template #clients>
-        <p>Clients:</p>
-      </ng-template>
-      <p *ngFor="let client of group.faculty">
-        <a [routerLink]="['/faculty', client.username, term]">{{client.username}}</a>: {{client.name}}
-      </p>
-      <hr>
-      <p *ngIf="group.students.length === 1; else members">Members:</p>
-      <ng-template #members>
-        <p>Members:</p>
-      </ng-template>
-      <p *ngFor="let member of group.students">
-        <a [routerLink]="['/student', member.username, term]">{{member.username}}</a>: {{member.name}}
-      </p>
+      <p>Members:</p>
+      <div *ngFor="let member of group.members">
+        <div *ngIf="member.type === 'Student'; else faculty">
+          <p>
+            <a [routerLink]="['/student', member.username, term]">{{member.username}}</a>
+            <span> : {{member.name}}</span>
+          </p>
+        </div>
+        <ng-template #faculty>
+          <p>
+            <a [routerLink]="['/faculty', member.username, term]">{{member.username}}</a>
+            <span> : {{member.name}}</span>
+          </p>
+        </ng-template>
+      </div>
     </mat-card-content>
   </mat-expansion-panel>
 </mat-accordion>
