--- a/schedule-app/src/app/groups/view-group/view-group.component.html
+++ b/schedule-app/src/app/groups/view-group/view-group.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let group of group" class="container">
   <div class="row">
     <div class="col-md-3">
-      <app-group-info [group]="group" [term]="term"></app-group-info>
+      <app-group-info [group]="group" [term]="term" [isGroupMember]="isGroupMember"></app-group-info>
     </div>
     <div class="col-md-9">
         <app-group-courses [group]="group" [term]="term"></app-group-courses>
