--- a/schedule-app/src/app/groups/create-group/create-group.component.html
+++ b/schedule-app/src/app/groups/create-group/create-group.component.html
@@ -14,13 +14,18 @@
           </mat-hint>
         </mat-input-container>
         <mat-input-container dividerColor="accent">
-          <input matInput placeholder="Class i.e. CSSE230-01" type="text" formControlName="class">
+          <input matInput placeholder="Description" type="text" formControlName="description">
           <mat-hint>
-            <span [hidden]="groupForm.controls.class.valid || groupForm.controls.class.pristine">
-              A class is required.
+            <span [hidden]="groupForm.controls.description.valid || groupForm.controls.description.pristine">
+              A description is required.
             </span>
           </mat-hint>
         </mat-input-container>
+        <label>Is this group for a specific class?</label>
+        <mat-radio-group formControlName="forClass">
+          <mat-radio-button value="true">Yes</mat-radio-button>
+          <mat-radio-button value="false">No</mat-radio-button>
+        </mat-radio-group>
         <mat-input-container dividerColor="accent">
           <mat-select placeholder="Term" formControlName="term">
             <mat-option></mat-option>
@@ -35,44 +40,26 @@
           </mat-hint>
         </mat-input-container>
         <mat-input-container dividerColor="accent">
-          <input matInput placeholder="Add students by username" type="text" formControlName="students">
+          <input matInput placeholder="Add members by username" type="text" formControlName="members">
           <mat-hint>
-            <mat-error *ngIf="studentsEmpty">
-              You must have at least one student in a group.
+            <mat-error *ngIf="membersEmpty">
+              You must have at least one member in the group.
             </mat-error>
           </mat-hint>
         </mat-input-container>
         <div fxLayout="row" fxLayoutAlign="start center">
-          <button mat-button color="primary" *ngFor="let student of students" (click)="removeStudent(student)">
-            {{student}}
+          <button mat-button color="primary" *ngFor="let member of members" (click)="removeMember(member)">
+            {{member}}
           </button>
         </div>
         <div class="spacer"></div>
-        <button mat-raised-button color="accent" (click)="addStudent(groupForm.value.students)" fxLayoutAlign="end center">
-          Add Student
-        </button>
-        <div class="spacer"></div>
-        <mat-input-container dividerColor="accent">
-          <input matInput placeholder="Add faculty by username" type="text" formControlName="faculty">
-          <mat-hint>
-            <mat-error *ngIf="facultyEmpty">
-              You must have at least one student in a group.
-            </mat-error>
-          </mat-hint>
-        </mat-input-container>
-        <div fxLayout="row" fxLayoutAlign="start center">
-          <button mat-button color="primary" *ngFor="let faculty of facultyMembers" (click)="removeFaculty(faculty)">
-            {{faculty}}
-          </button>
-        </div>
-        <div class="spacer"></div>
-        <button mat-raised-button color="accent" (click)="addFaculty(groupForm.value.faculty)" fxLayoutAlign="end center">
-          Add Faculty
+        <button mat-raised-button color="accent" (click)="addMember(groupForm.value.members)" fxLayoutAlign="end center">
+          Add Member
         </button>
         <div class="spacer"></div>
       </mat-card-content>
       <mat-card-actions fxLayout="row" fxLayoutAlign="end end">
-        <button mat-raised-button class="mat-primary" [disabled]="!groupForm.valid"  (click)="viewGroup(groupForm.value)">
+        <button mat-raised-button class="mat-primary" [disabled]="!groupForm.valid" (click)="viewGroup(groupForm.value)">
           Add Group
         </button>
       </mat-card-actions>
