--- a/schedule-app/src/app/groups/view-group/group-info/group-info.component.html
+++ b/schedule-app/src/app/groups/view-group/group-info/group-info.component.html
@@ -7,9 +7,9 @@
     </mat-expansion-panel-header>
     <mat-card-content>
       <p>For:
-        <a *ngIf="group.forClass; else noClass" [routerLink]="['/course', group.for, term]">{{group.for}}</a>
+        <a *ngIf="group.forClass; else noClass" [routerLink]="['/course', group.description, term]">{{group.description}}</a>
         <ng-template #noClass>
-          <p>{{group.for}}</p>
+          <p>{{group.description}}</p>
         </ng-template>
       </p>
       <hr>
