Added faculty info page

--- a/schedule-app/src/app/faculty/faculty-term-info/faculty-term-info.component.html
+++ b/schedule-app/src/app/faculty/faculty-term-info/faculty-term-info.component.html
@@ -30,7 +30,7 @@
   </div>
   <div class="row">
     <div class="col-md-3">
-      <app-faculty-info [faculty]="faculty"></app-faculty-info>
+      <app-faculty-desc [faculty]="faculty"></app-faculty-desc>
     </div>
     <div class="col-md-9">
       <app-faculty-course-info [faculty]="faculty"></app-faculty-course-info>
