--- a/schedule-app/src/app/search/search.component.html
+++ b/schedule-app/src/app/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
+  <div class="row" fxLayout="row" fxLayoutAlign="space-around center">
+    <div class="col-md-6">
       <mat-card>
         <mat-card-title>
           <h2>Hello {{authService.getName()}}!</h2>
@@ -15,12 +15,19 @@
       </mat-card>
     </div>
   </div>
-  <div class="row">
+  <div class="row" fxLayout="row" fxLayoutAlign="space-around center">
     <div class="col-md-6">
-      <app-member-search></app-member-search>
-    </div>
-    <div class="col-md-6">
-      <app-course-search></app-course-search>
+      <mat-tab-group color="accent">
+        <mat-tab label="Search for Single User">
+          <app-member-search></app-member-search>
+        </mat-tab>
+        <mat-tab label="Search for Multiple Users">
+          <app-members-search></app-members-search>
+        </mat-tab>
+        <mat-tab label="Search for a Course">
+          <app-course-search></app-course-search>
+        </mat-tab>
+      </mat-tab-group>
     </div>
   </div>
 </div>
